tests/snapshot/error/source_locations/statement/return/check_this_initialized.js
class B {
  foo = 1;
}

class C extends B {
  constructor() {
    return;
  }
}

new C();